src/local/src/tests/snapshots/liquid_cache_local__tests__squeeze__squeeze_substrings_search_title.snap
---
source: src/local/src/tests/squeeze.rs
expression: trace
---
EventTrace: [
event=insert_success entry=131072 kind=MemoryArrow
event=insert_failed entry=131073 kind=MemoryArrow
event=squeeze_begin victims=[131072]
event=squeeze_victim entry=131072
event=insert_success entry=131072 kind=MemoryLiquid
event=insert_success entry=131073 kind=MemoryArrow
event=insert_failed entry=131074 kind=MemoryArrow
event=squeeze_begin victims=[131073,131072]
event=squeeze_victim entry=131073
event=insert_success entry=131073 kind=MemoryLiquid
event=squeeze_victim entry=131072
event=io_write entry=131072 kind=MemorySqueezedLiquid bytes=260424
event=insert_success entry=131072 kind=MemorySqueezedLiquid
event=insert_success entry=131074 kind=MemoryArrow
event=eval_predicate entry=131072 selection=true cached=MemorySqueezedLiquid
event=io_read_squeezed_backing entry=131072 bytes=260424
event=decompress_squeezed entry=131072 decompressed=1054 total=1724
event=eval_predicate entry=131073 selection=true cached=MemoryLiquid
event=eval_predicate entry=131074 selection=true cached=MemoryArrow
event=insert_success entry=4295098368 kind=MemoryArrow
event=eval_predicate entry=4295098368 selection=true cached=MemoryArrow
]
